fix: add dfu as dependency, remove unnecessary stuff, add vanilla