@@ -19,7 +19,6 @@ object Properties {
 	const val FORGEJO_REPO = "Modding/silicate"
 	const val FORGEJO_COMITISH = Versions.MINECRAFT
 
-	val JAVAC_ARGS = listOf(
-		"--add-reads", "silicate.impl=ALL-UNNAMED"
+	val JAVAC_ARGS = listOf<String>(
 	)
 }
